# Esercitazione_6_Sorting

./: .gitignore
Exercise2/: CMakeLists.txt  README.md  main.cpp  main_test.cpp
Exercise2/src/: CMakeLists.txt  SortingAlgorithm.hpp
Exercise2/src_test/: CMakeLists.txt  test_sorting_algorithm.hpp
